feat: Added hospital to account assignment
